# ScriptureStudy

./: .gitignore  .vercelignore  chapters.txt  notes.md  readme.md
app/: .envrc  .gitignore  .prettierrc  README.md  next.config.js  package.json  tsconfig.json
app/src/: config.ts
app/src/Tldraw/: Tldraw.spec.tsx  Tldraw.tsx  constants.ts  index.ts  types.ts
app/src/Tldraw/components/: breakpoints.tsx  stopPropagation.ts
app/src/app/: globals.css  head.tsx  layout.client.tsx  layout.tsx  page.tsx
app/src/components/: ChaperSideEffects.tsx  Chapter.tsx  ChapterNotes.tsx  ChapterNotes_.tsx  CommandPalette.tsx  Controls.tsx  Editor.tsx  Editor_.tsx  FloatingEditor.tsx  Html.tsx  Link.tsx  Notes.tsx  RecordVisitedChaper.tsx  VerseSelection.tsx  Window.tsx
app/src/hooks/: chaperEffects.tsx  window.ts
app/src/lib/: Eq.ts  bibleIndex.ts  clsxm.ts  fp.ts  language.ts  router-events.ts  useIsMobile.tsx
app/src/models/: atoms.ts  comments.ts  editor.ts  highlight.ts  html.ts  reference.ts  routes.ts  selection.ts  token.ts
html2json/: Cargo.toml  genesis-1.html
html2json/src/: main.rs  tagged_dom.rs
scrapper/: .prettierrc  download.ts  extract.ts  makeIndex.ts  normalize.ts  notes.md  package-lock.json  package.json  structure.json  structure.ts  tsconfig.json
switcher/: .prettierrc  package.json  tailwind.config.js
switcher/public/: index.html
switcher/src/: App.test.tsx  App.tsx  BackHome.tsx  Chapter.tsx  CommandPalette.tsx  Controls.tsx  Html.tsx  Switcher.tsx  config.ts  index.css  index.tsx  options.ts  reportWebVitals.ts
(+334 files in other folders)
