[package]
name = "html2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0.95"
